# verible-py

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
.github/workflows/: main.yaml  main.yml  tag-on-merge.yaml  tag-on-merge.yml  update-verible.yaml  update-verible.yml
scripts/: update-verible.py
