[metadata]
name = verible_py
version = 0.0.4080
description = Pre-commit hook for verible (https://chipsalliance.github.io/verible/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chipsalliance/verible
author = Henner Zeller
author_email = h.zeller@acm.org
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.10
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [verible-verilog-lint]
    group = verible-verilog-lint
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4080-ga0a8d8eb/verible-v0.0-4080-ga0a8d8eb-linux-static-x86_64.tar.gz
    sha256 = f75daa70f29dbe9624ffee3738408341cfdadbdaf7e5d714a5bcceb9223953e6
    extract = tar
    extract_path = verible-v0.0-4080-ga0a8d8eb/bin/verible-verilog-lint
    [verible-verilog-lint]
    group = verible-verilog-lint
    marker = sys_platform == "linux" and platform_machine == "arm64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4080-ga0a8d8eb/verible-v0.0-4080-ga0a8d8eb-linux-static-arm64.tar.gz
    sha256 = f573e073251032eff8245a7ff04ec88f08a624105748f986b822af43dbaeddce
    extract = tar
    extract_path = verible-v0.0-4080-ga0a8d8eb/bin/verible-verilog-lint
    [verible-verilog-lint.exe]
    group = verible-verilog-lint
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4080-ga0a8d8eb/verible-v0.0-4080-ga0a8d8eb-win64.zip
    sha256 = e4c5314de06b3c6b641624fbefaa94b0d07486a462f0a2511b03db156c1bc3a0
    extract = zip
    extract_path = verible-v0.0-4080-ga0a8d8eb-win64/verible-verilog-lint.exe
    [verible-verilog-lint]
    group = verible-verilog-lint
    marker = sys_platform == "darwin"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4080-ga0a8d8eb/verible-v0.0-4080-ga0a8d8eb-macOS.tar.gz
    sha256 = 96115cd3fa3e5a1172e3be834ba5d0fd15d310441ee8580a833d25f89d43638e
    extract = tar
    extract_path = verible-v0.0-4080-ga0a8d8eb/bin/verible-verilog-lint
    [verible-verilog-format]
    group = verible-verilog-format
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4080-ga0a8d8eb/verible-v0.0-4080-ga0a8d8eb-linux-static-x86_64.tar.gz
    sha256 = f75daa70f29dbe9624ffee3738408341cfdadbdaf7e5d714a5bcceb9223953e6
    extract = tar
    extract_path = verible-v0.0-4080-ga0a8d8eb/bin/verible-verilog-format
    [verible-verilog-format]
    group = verible-verilog-format
    marker = sys_platform == "linux" and platform_machine == "arm64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4080-ga0a8d8eb/verible-v0.0-4080-ga0a8d8eb-linux-static-arm64.tar.gz
    sha256 = f573e073251032eff8245a7ff04ec88f08a624105748f986b822af43dbaeddce
    extract = tar
    extract_path = verible-v0.0-4080-ga0a8d8eb/bin/verible-verilog-format
    [verible-verilog-format.exe]
    group = verible-verilog-format
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4080-ga0a8d8eb/verible-v0.0-4080-ga0a8d8eb-win64.zip
    sha256 = e4c5314de06b3c6b641624fbefaa94b0d07486a462f0a2511b03db156c1bc3a0
    extract = zip
    extract_path = verible-v0.0-4080-ga0a8d8eb-win64/verible-verilog-format.exe
    [verible-verilog-format]
    group = verible-verilog-format
    marker = sys_platform == "darwin"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4080-ga0a8d8eb/verible-v0.0-4080-ga0a8d8eb-macOS.tar.gz
    sha256 = 96115cd3fa3e5a1172e3be834ba5d0fd15d310441ee8580a833d25f89d43638e
    extract = tar
    extract_path = verible-v0.0-4080-ga0a8d8eb/bin/verible-verilog-format
