[metadata]
name = verible_py
version = 0.0.4084
description = Pre-commit hook for verible (https://chipsalliance.github.io/verible/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chipsalliance/verible
author = Henner Zeller
author_email = h.zeller@acm.org
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.10
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [verible-verilog-lint]
    group = verible-verilog-lint
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4084-gf3e4d98b/verible-v0.0-4084-gf3e4d98b-linux-static-x86_64.tar.gz
    sha256 = 9f9be876fd9242274ac43f8c379a888aaa85fd99493783d0293b07474e2ccc67
    extract = tar
    extract_path = verible-v0.0-4084-gf3e4d98b/bin/verible-verilog-lint
    [verible-verilog-lint]
    group = verible-verilog-lint
    marker = sys_platform == "linux" and platform_machine == "arm64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4084-gf3e4d98b/verible-v0.0-4084-gf3e4d98b-linux-static-arm64.tar.gz
    sha256 = d8dda23ba884f75042c77bae2205f0d74ae9df472d00948e8d0122906cea87fd
    extract = tar
    extract_path = verible-v0.0-4084-gf3e4d98b/bin/verible-verilog-lint
    [verible-verilog-lint.exe]
    group = verible-verilog-lint
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4084-gf3e4d98b/verible-v0.0-4084-gf3e4d98b-win64.zip
    sha256 = e8eb9f6407f7816147dc269e32b549ad696018b234a19a297b2c7a40c685b8b7
    extract = zip
    extract_path = verible-v0.0-4084-gf3e4d98b-win64/verible-verilog-lint.exe
    [verible-verilog-lint]
    group = verible-verilog-lint
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4084-gf3e4d98b/verible-v0.0-4084-gf3e4d98b-macOS.tar.gz
    sha256 = e755f93241531beff0e592a1085130d66a821308f3ce2a06197d3c598f173ddc
    extract = tar
    extract_path = verible-v0.0-4084-gf3e4d98b-macOS/bin/verible-verilog-lint
    [verible-verilog-format]
    group = verible-verilog-format
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4084-gf3e4d98b/verible-v0.0-4084-gf3e4d98b-linux-static-x86_64.tar.gz
    sha256 = 9f9be876fd9242274ac43f8c379a888aaa85fd99493783d0293b07474e2ccc67
    extract = tar
    extract_path = verible-v0.0-4084-gf3e4d98b/bin/verible-verilog-format
    [verible-verilog-format]
    group = verible-verilog-format
    marker = sys_platform == "linux" and platform_machine == "arm64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4084-gf3e4d98b/verible-v0.0-4084-gf3e4d98b-linux-static-arm64.tar.gz
    sha256 = d8dda23ba884f75042c77bae2205f0d74ae9df472d00948e8d0122906cea87fd
    extract = tar
    extract_path = verible-v0.0-4084-gf3e4d98b/bin/verible-verilog-format
    [verible-verilog-format.exe]
    group = verible-verilog-format
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4084-gf3e4d98b/verible-v0.0-4084-gf3e4d98b-win64.zip
    sha256 = e8eb9f6407f7816147dc269e32b549ad696018b234a19a297b2c7a40c685b8b7
    extract = zip
    extract_path = verible-v0.0-4084-gf3e4d98b-win64/verible-verilog-format.exe
    [verible-verilog-format]
    group = verible-verilog-format
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4084-gf3e4d98b/verible-v0.0-4084-gf3e4d98b-macOS.tar.gz
    sha256 = e755f93241531beff0e592a1085130d66a821308f3ce2a06197d3c598f173ddc
    extract = tar
    extract_path = verible-v0.0-4084-gf3e4d98b-macOS/bin/verible-verilog-format
